--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "devDependencies": {
-    "tailwindcss": "^3.4.3",
-    "run": "npx tailwindcss -i ./assets/css/input.css -o ./assets/css/output.css --watch"
+    "tailwindcss": "^3.4.3"
+  },
+  "scripts": {
+    "dev": "npx tailwindcss -i ./assets/css/input.css -o ./assets/css/output.css --watch"
   }
 }
